--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "fabric": "^6.5.4"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "fabric": "^6.5.4",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1"
   }
 }
