--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "name": "collabdraw",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "fabric": "^6.5.4",
-    "socket.io": "^4.8.1",
-    "ws": "^8.18.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.7.2",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
