--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "collabdraw",
+  "name": "fabric-websocket-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "cors": "^2.8.5"
   },
